--- a/mongo-pvc.yaml
+++ b/mongo-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongodb-pvc 
+  name: mongo-pvc 
 spec:
   resources:
     requests:
-      storage: 1Gi
+      storage: 4Gi
   accessModes:
   - ReadWriteOnce
-  storageClassName: ""
+  storageClassName: "Standard"
