--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -1,25 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongobackend
   labels:
-    app.kubernetes.io/name: mongo
+    app.kubernetes.io/name: mongobackend
     app.kubernetes.io/component: backend
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: mongo
+      app.kubernetes.io/name: mongobackend
       app.kubernetes.io/component: backend
   replicas: 1
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: mongo
+        app.kubernetes.io/name: mongobackend
         app.kubernetes.io/component: backend
     spec:
       containers:
-      - name: mongo
+      - name: mongobackend
         image: mongo:4.2
+        volumeMounts:
+          - mountPath: /backend
+            name: mongo-pvc
         args:
           - --bind_ip
           - 0.0.0.0
@@ -29,3 +32,7 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 27017
+      volumes:
+      - name: mongo-pvc
+        persistentVolumeClaim:
+          claimName: mongo-pvc
