--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: gbfrontend
   labels:
-    app.kubernetes.io/name: guestbook
+    app.kubernetes.io/name: gbfrontend
     app.kubernetes.io/component: frontend
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: guestbook
+      app.kubernetes.io/name: gbfrontend
       app.kubernetes.io/component: frontend
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: guestbook
+        app.kubernetes.io/name: gbfrontend
         app.kubernetes.io/component: frontend
     spec:
       containers:
-      - name: guestbook
+      - name: gbfrontend
         image: paulczar/gb-frontend:v5
         # image: gcr.io/google-samples/gb-frontend:v4
         resources:
